# graph_challenge

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
ci/: install.sh
scripts/: run-benchmark.sh  run-binary.sh  run-dyn-g01.sh  run-dyn.sh  run-dysel.sh  run-io-overlap.sh  run-linear-io-queue-g01.sh  run-linear-io-queue-g0123.sh  run-linear-io-queue.sh  run-linear-mp.sh
src/: 2dhist.cu  CMakeLists.txt  benchmark_BissonFatica.cu  benchmark_BissonFatica_low_tri.cu  benchmark_b_vertex_t_edge_binary.cu  benchmark_binary.cu  benchmark_binary_ktruss.cu  benchmark_bissonfatica18.cu  benchmark_bitmap.cu  benchmark_bitvector.cu  benchmark_bmtx.cu  benchmark_bmtx_cpu.cu  benchmark_bmtx_gpu.cu  benchmark_bs_vertex_t_edge_binary.cu  benchmark_crossdecomp.cu  benchmark_csr_binned.cu  benchmark_cusparse.cu  benchmark_dyn.cu  benchmark_dysel.cu  benchmark_io_overlap.cu  benchmark_ktruss.cu  benchmark_linear.cu  benchmark_linear2.cu  benchmark_linear3.cu  benchmark_linear_io_queue.cu  benchmark_linear_io_vec_queue.cu  benchmark_linear_mp.cu  benchmark_multiGPU_binary_HSC_ktruss_TW.cu  benchmark_multiGPU_binary_ktruss.byK.cu  benchmark_multiGPU_binary_ktruss.bydata.cu  benchmark_multiGPU_binary_ktruss.byk.cu  benchmark_multiGPU_binary_ktruss.cu  benchmark_multiGPU_incremental_HSC_ktruss.1.cu  benchmark_multiGPU_incremental_HSC_ktruss.cu  benchmark_multiGPU_incremental_HSC_ktruss11.cu  benchmark_multiGPU_incremental_SSC_ktruss.cu  benchmark_multinode_binary_ktruss.cu  benchmark_multinode_incremental_ktruss.cu  benchmark_multinode_incremental_ktruss_HSC.cu  benchmark_nvgraph.cu  (+9 more)
tools/: cdf.py  csr-analysis.py  esc.py  get_data.py  heatmap.py  hilbert.py  partition.py  simple.bel  simple.tsv  stats.py  tsv-to-bel.py
